--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ p{
 }
 
 :root {
+    --bg-color:#ffffff;
     --brand-color:#2196F3;
     --logo-color:#000000;
     --a-color:#000000;
@@ -35,7 +36,9 @@ p{
 body{
     color:var(--text-color);
     font-family: 'Roboto', 'Verdana', 'Tahoma', sans-serif;
-    margin: 0;
+    background-color: var(--bg-color);
+    font-size: 14px;
+    letter-spacing: 0.03em;
 }
 
 ul{
@@ -88,7 +91,7 @@ header {
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1,19;
+    line-height: 1.19;
     letter-spacing: 0.03em
 }
 
@@ -113,10 +116,15 @@ span {
     margin-left: 50px;
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 }
+
+.curent {
+    color: var(--brand-color);
+}
+
+
 
 .cont a{
     color:var(--text-color);
@@ -190,8 +198,7 @@ li>a:focus
     margin-top: 94px;
     height: 42px;
     font-size: 36px;
-    line-height: 1,167;
-    letter-spacing: 0.03em;
+    line-height: 1.167;
 }
 
 .work ul{
@@ -217,9 +224,8 @@ li>a:focus
     padding-top: 94px;
     font-style: normal;
     font-size: 36px;
-    line-height: 1,167;
+    line-height: 1.167;
     text-align: center;
-    letter-spacing: 0.03em;
 }
 
 .team ul{
@@ -257,9 +263,7 @@ footer .logo{
 
 footer li{
     font-style: normal;
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     margin-top: 10px;
 }
 
