--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ p{
     --bg-color:#ffffff;
     --brand-color:#2196F3;
     --logo-color:#000000;
-    --a-color:#000000;
-    --h-color:#000000;
+    --a-color:#212121;;
+    --h-color:#212121;;
     --text-color:#757575;
     --header-bg-color:#FFFFFF;
     --border-heder-color:#ECECEC;
@@ -92,7 +92,8 @@ header {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em
+    letter-spacing: 0.03em;
+    color: #000000;
 }
 
 span {
@@ -100,13 +101,11 @@ span {
 }
 
 .navig{
-    height: 16px;
     margin-left: 63px;
     margin-top: 32px;
 }
 
 .cont-s{
-    height: 16px;
     margin-left: 301px;
     margin-top: 32px;
 }
@@ -120,7 +119,7 @@ span {
     letter-spacing: 0.02em;
 }
 
-.curent {
+.curent a{
     color: var(--brand-color);
 }
 
@@ -171,6 +170,7 @@ li>a:focus
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
+    letter-spacing: 0.06em;
 
     color:var(--text-order-color);
 }
@@ -187,10 +187,18 @@ li>a:focus
     margin-top: 94px;
 }
 
+.characters h3{
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    line-height: 1.14;
+}
+
 .characters li{
     width: 270px;
     height: 101px;
     margin-left: 30px;
+    line-height: 1.71;
 }
 
 .work h2{
@@ -234,10 +242,12 @@ li>a:focus
 }
 
 .team li{
+    font-size: 16px;
     text-align: center;
     width: 270px;
     height: 368px;
     background-color:var(--team-item-bg-color);
+    line-height: 1.18;
     margin-left: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -271,7 +281,7 @@ footer li{
     color: var(--addres--footer-color);
 }
 
-.contacts a[href^="https"] {
+.locatoin a{
     color: var(--address-location-color);
 } 
 
@@ -287,9 +297,14 @@ footer li{
     border-radius: 4px;
     padding: 6px 22px;
     border: var(--filter-butt-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
 }
 
-.filter button:active{
+.filter button:active,
+.filter button:hover,
+.filter button:focus{
     background: var(--filter-butt-active-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
@@ -301,8 +316,10 @@ footer li{
 }
 
 .item{
+    display: flex;
+    flex-wrap: wrap;
     margin-left: 185px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .content {
@@ -316,17 +333,21 @@ footer li{
     height: 404px;
     background:var(--item-elem-bg-color);
     border: 1px solid var(--item-elem-border-color);
+    margin-bottom: 30px;
     margin-left: 30px;
 }
 
 .item h3{
-    height: 36px;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
     margin-top: 20px;
     margin-left: 24px;
     margin-bottom: 4px;
 }
 
 .item p{
-    height: 30px;
+    font-size: 16px;
+    line-height: 1.88;
     margin-left: 24px;
 }
